test cases/rust/12 bindgen: Add subdir and rust static rlib usage
With the current 8162 PR and this change, I see this error from ninja:

ninja: error: 'header.rs', needed by 'src/librust_lib.rlib', missing and no known rule to make it

Ref: https://github.com/mesonbuild/meson/pull/8162
Signed-off-by: Jordan Justen <jljusten@gmail.com>

--- a/test cases/rust/12 bindgen/meson.build
+++ b/test cases/rust/12 bindgen/meson.build
@@ -14,11 +14,7 @@ c_lib = static_library('clib', 'src/source.c', include_directories : inc)
 
 rust = import('unstable-rust')
 
-gen = rust.bindgen(
-  input : 'src/header.h',
-  output : 'header.rs',
-  include_directories : inc,
-)
+subdir('src')
 
 # see: https://github.com/mesonbuild/meson/issues/8160
 f = configure_file(
@@ -29,8 +25,8 @@ f = configure_file(
 
 rust_bin = executable(
   'rust_bin',
-  [f, gen],
-  link_with : c_lib,
+  [f],
+  link_with : [c_lib, rust_rlib],
 )
 
 test('main', rust_bin)
